@@ -1,3 +1,6 @@
+2012-01-04  Kirit Saelensminde  <kirit@felspar.com>
+ Changed one of the networking tests to send less data on Windows as the test would hardly ever pass. It is still a bit unreliable though :(
+
 2011-10-24  Kirit Saelensminde  <kirit@felspar.com>
  Allow a few more characters in the file specification for URLs.
 
